added checking password to changed smena
