# domain/shift.model.go
@@ -18,4 +18,5 @@ type ShiftRequest struct {
 	CashBoxId      string `gorm:"cash_box_id" json:"cash_box_id"`
 	FromEmployeeId string `gorm:"from_employee_id" json:"from_employee_id"`
 	ToEmployeeId   string `gorm:"to_employee_id" json:"to_employee_id"`
+	Password       string `gorm:"-" json:"password"`
 }
